[tool.poetry]
name = "beckendcourse"
version = "0.1.0"
description = ""
authors = ["mi42195 <aptraev.mv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
